<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    android:orientation="vertical" 
    android:gravity="center_vertical">

    <LinearLayout 
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal">
	    <LinearLayout 
	        android:layout_width="match_parent"
	        android:layout_height="match_parent"
	        android:orientation="vertical">
	        <TextView android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:text="@string/username"
	            android:layout_weight="1"
	            android:gravity="center"/>
	        <TextView android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/password"
	            android:layout_weight="1"
	            android:gravity="center"/>  
	    </LinearLayout>
	    
		<LinearLayout 
		    android:layout_width="0dp"
		    android:layout_height="wrap_content"
		    android:layout_weight="1"
		    android:orientation="vertical">
		    <EditText
				android:id="@+id/user_email"
				android:textSize="12sp"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:inputType="textEmailAddress"
				android:hint="@string/input_username"/>	  
		    <EditText
		       android:id="@+id/password"
		       android:textSize="12sp"
		       android:layout_width="match_parent"
		       android:layout_height="wrap_content"
		       android:hint="@string/input_password"
		       android:inputType="textPassword"/>
		</LinearLayout>
	</LinearLayout>
	        
    <CheckBox   
        android:id="@+id/chbx_rem"  
        android:layout_width="wrap_content"  
        android:layout_height="wrap_content" 
        android:text="@string/remember"/>  
	
	<LinearLayout android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal"
	    android:gravity="center_horizontal">
	    <Button
	        android:id="@+id/loginButton"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/login"
	        android:layout_marginRight="20dp" />
	    <Button
	        android:id="@+id/signupButton"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginLeft="20dp"
	        android:text="@string/signup" />
    </LinearLayout>
	<LinearLayout android:layout_width="match_parent"
	    android:layout_height="match_parent"
	    android:orientation="horizontal"
	    android:gravity="bottom|left">
		<TextView
		    android:id="@+id/tv_result"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:text="TextView" />
	</LinearLayout>
	       
</LinearLayout>
